<resources>
    <string name="app_name" translatable="false">Queue Manager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="main_fragment_label">Main page</string>
    <string name="queue_list_fragment_label">Queue list</string>
    <string name="menu_fragment_label">Options</string>
    <string name="queue_peopleCount_label">"Peoples: "</string>
    <string name="connection_wait_text">Trying to connect</string>
    <string name="login_wait_text">Checking login</string>
    <string name="login_field_hint">Login</string>
    <string name="password_field_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="signIn_button_text">Sign In</string>
    <string name="connection_failed_text">Connection failed</string>
    <string name="login_label">Login</string>
    <string name="username_label">Username</string>
    <string name="connection_check_label">Connection check</string>
    <string name="loggingIn_wait_text">Logging in…</string>
    <string name="retryConnection_button_text">Retry</string>
    <string name="username_field_hint">Username</string>
    <string name="login_contains_bad_chars">Login contains bad chars</string>
    <string name="password_contains_bad_chars">Password contains bad chars</string>
    <string name="username_contains_bad_chars">Username contains bad chars</string>
    <string name="short_login_error">Login is too short</string>
    <string name="short_password_error">Password is too short</string>
    <string name="loading_placeholder_text">Loading...</string>
    <string name="favourite_button_hint">Add to favourite</string>
    <string name="joinQueue_button_text">Join</string>
    <string name="leaveQueue_button_text">Leave</string>
    <string name="popQueue_button_text">Pop first</string>
    <string name="freezeInQueue_button_text">Freeze me</string>
    <string name="unfreezeInQueue_button_text">Unfreeze me</string>
    <string name="queue_creation_label">Creating queue</string>
    <string name="queue_name_input_label">Name</string>
    <string name="text_description_input_label">Description</string>
    <string name="create_queue_button_text">Create</string>
    <string name="delete_queue_menu_item">Delete</string>
    <string name="deletion_confirmation_dialog_text">Are you sure?</string>
    <string name="deletion_configmation_dialog_yes">Yes</string>
    <string name="deletion_confirmation_dialog_cancel">Cancel</string>
    <string name="notification_channel_id" translatable="false">qm.main_notifications</string>
    <string name="service_switch_text">Enable service</string>
    <string name="logOut_button_text">Log out</string>
    <string name="enterDevMenu_button_text" translatable="false">Enter dev menu</string>
    <string name="dev_checkServiceRunning_button_text" translatable="false">Check service</string>
    <string name="dev_devMenu_label" translatable="false">Dev menu</string>
    <string name="you_are_next_nitification">You are next in</string>
    <string name="notificationChannel_name" translatable="false">Notifications</string>
    <string name="favourite_tab_title">Favourite</string>
    <string name="dev_checkFavourite_button" translatable="false">Check favourite</string>
</resources>