<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical"
        tools:context=".view.mainActivity.MenuFragment">

        <LinearLayout
            android:id="@+id/profile_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/profile_background"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:elevation="8dp"
                android:src="@drawable/profile_image" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/card_background"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="16dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/account_username_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/username_label"
                        android:textColor="@color/mainText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/account_username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="..."
                        android:textAlignment="textEnd"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="16dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/account_login_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/login_label"
                        android:textColor="@color/mainText"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/account_login_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="..."
                        android:textAlignment="textEnd"
                        android:textColor="@color/secondaryText"
                        android:textSize="16sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/options_tab"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_background"
            android:elevation="8dp"
            android:orientation="vertical">

            <Switch
                android:id="@+id/service_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/service_switch_text" />

            <Button
                android:id="@+id/logOut_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:elevation="8dp"
                android:gravity="right"
                android:text="@string/logOut_button_text"
                android:textColor="@color/design_default_color_error" />
        </LinearLayout>

        <Button
            android:id="@+id/enterDevMenu_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enterDevMenu_button_text" />

    </LinearLayout>
</layout>
