<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<!--    <data>-->
<!--        <variable-->
<!--            name="accountVM"-->
<!--            type="ru.mrnightfury.queuemanager.viewmodel.AccountViewModel"/>-->
<!--        <variable-->
<!--            name="login"-->
<!--            type="String" />-->
<!--        <variable-->
<!--            name="password"-->
<!--            type="String" />-->

<!--        <variable-->
<!--            name="loginClickHandler"-->
<!--            type="android.view.View.OnClickListener"/>-->
<!--        <variable-->
<!--            name="signInClickHandler"-->
<!--            type="android.view.View.OnClickListener" />-->
<!--    </data>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        android:gravity="center"
        android:orientation="vertical"
        tools:context=".view.launchActivity.LoginFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/loginForm_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/card_background">

            <EditText
                android:id="@+id/login_input_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:ems="10"
                android:hint="@string/login_field_hint"
                android:inputType="text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="dsa"/>

            <EditText
                android:id="@+id/password_input_field"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password_field_hint"
                android:inputType="textPassword"
                android:text="asd"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/login_input_field" />

            <Button
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/login_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/signIn_button"
                app:layout_constraintTop_toBottomOf="@+id/password_input_field" />

            <Button
                android:id="@+id/signIn_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/signIn_button_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password_input_field" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>